# VolumeControl.UpdateUtility

./: .gitignore  CMakeLists.txt  SECURITY.md
.github/workflows/: Generate-Release.yml
UpdateUtility/: CMakeLists.txt  UpdateUtility.cpp
UpdateUtility/rc/: VCUpdateUtility.rc  version.h
VCUpdateUtility/: CMakeLists.txt  Global.hpp  StreamRedirect.hpp  VCUpdateUtility.cpp  win.cpp  win.h
VCUpdateUtility/UnitTests/: CMakeLists.txt
